--- a/map.html
+++ b/map.html
@@ -32,7 +32,7 @@ h3 {
 </head>
 <body>
 <div class= "container">
-<h3>KIET GROUP OF INSTITUTIONS Map</h3>
+<h3>KIET GROUP OF INSTITUTIONS MAP</h3>
 
 </div>
 <div id="Map"></div>
